{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 64,
  "lineage": "11ff358d-e83e-fdef-ee01-0208fda6ed4a",
  "resources": [
    {
      "module": "module.rafael_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:security-group/sg-03d314510908ad767",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-03d314510908ad767",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f49d067e071ca7e"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "rafael-cluster-cluster-20230928060103426700000009",
            "name_prefix": "rafael-cluster-cluster-",
            "owner_id": "338094379420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rafael-cluster-cluster"
            },
            "tags_all": {
              "Name": "rafael-cluster-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d61545942958700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rafael_eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:security-group/sg-03f49d067e071ca7e",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f49d067e071ca7e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d314510908ad767"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d314510908ad767"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d314510908ad767"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d314510908ad767"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d314510908ad767"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03d314510908ad767"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "rafael-cluster-node-20230928060103210400000008",
            "name_prefix": "rafael-cluster-node-",
            "owner_id": "338094379420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rafael-cluster-node",
              "kubernetes.io/cluster/rafael-cluster": "owned"
            },
            "tags_all": {
              "Name": "rafael-cluster-node",
              "kubernetes.io/cluster/rafael-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d61545942958700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rafael_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3418386165",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-03d314510908ad767",
            "security_group_rule_id": "sgr-05e9a37f309f23b1d",
            "self": false,
            "source_security_group_id": "sg-03f49d067e071ca7e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rafael_eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2674043662",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-0e5d358f914a0a9c0",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-180962216",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-00f06b2bf7bdfe81e",
            "self": false,
            "source_security_group_id": "sg-03d314510908ad767",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-469542298",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-02c73e486d42fc418",
            "self": false,
            "source_security_group_id": "sg-03d314510908ad767",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-3535716876",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-08e9efcc6ecd00b75",
            "self": false,
            "source_security_group_id": "sg-03d314510908ad767",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-3252878893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-0efb6949e90c796b9",
            "self": false,
            "source_security_group_id": "sg-03d314510908ad767",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-2772684262",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-0dea35b0e4a22a0d7",
            "self": false,
            "source_security_group_id": "sg-03d314510908ad767",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-75722781",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-0d1d906340af6da3d",
            "self": false,
            "source_security_group_id": "sg-03d314510908ad767",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-537046084",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-0df220d4de45c53a7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3051737096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-0c31c1c187de254c7",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-297432039",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03f49d067e071ca7e",
            "security_group_rule_id": "sgr-01f7bd9203833b1db",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_eks.aws_security_group.cluster",
            "module.rafael_eks.aws_security_group.node",
            "module.rafael_vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:network-acl/acl-0b0940f7775138970",
            "default_network_acl_id": "acl-0b0940f7775138970",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0b0940f7775138970",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "338094379420",
            "subnet_ids": [
              "subnet-017926da2551f90b7",
              "subnet-0534d83e254eb7f5d",
              "subnet-05cc76f84e97d42b5",
              "subnet-0637e4a15a2c7c40c",
              "subnet-097ce084262ace9c4",
              "subnet-0990cca3e68831f68"
            ],
            "tags": {
              "Name": "rafael_vpc-default",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc-default",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:route-table/rtb-0fd005aea495a2e4a",
            "default_route_table_id": "rtb-0fd005aea495a2e4a",
            "id": "rtb-0fd005aea495a2e4a",
            "owner_id": "338094379420",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "rafael_vpc-default",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc-default",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:security-group/sg-096621d6a974c0214",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-096621d6a974c0214",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "338094379420",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rafael_vpc-default",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc-default",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbf7e47073100d61",
            "association_id": "eipassoc-07331845078007586",
            "domain": "vpc",
            "id": "eipalloc-0fbf7e47073100d61",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b2dd75e7b11f07c4",
            "private_dns": "ip-10-0-4-134.ec2.internal",
            "private_ip": "10.0.4.134",
            "public_dns": "ec2-3-215-76-194.compute-1.amazonaws.com",
            "public_ip": "3.215.76.194",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "rafael_vpc-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "module.rafael_vpc.aws_internet_gateway.this",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:internet-gateway/igw-083f1db349a104d4c",
            "id": "igw-083f1db349a104d4c",
            "owner_id": "338094379420",
            "tags": {
              "Name": "rafael_vpc",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fbf7e47073100d61",
            "association_id": "eipassoc-07331845078007586",
            "connectivity_type": "public",
            "id": "nat-09a83ab7f1b327ec5",
            "network_interface_id": "eni-0b2dd75e7b11f07c4",
            "private_ip": "10.0.4.134",
            "public_ip": "3.215.76.194",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-017926da2551f90b7",
            "tags": {
              "Name": "rafael_vpc-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared"
            }
          },
          "dependencies": [
            "module.rafael_vpc.aws_eip.nat",
            "module.rafael_vpc.aws_internet_gateway.this",
            "module.rafael_vpc.aws_subnet.public",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a28b5a4f4d597a561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09a83ab7f1b327ec5",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a28b5a4f4d597a56",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_eip.nat",
            "module.rafael_vpc.aws_internet_gateway.this",
            "module.rafael_vpc.aws_nat_gateway.this",
            "module.rafael_vpc.aws_route_table.private",
            "module.rafael_vpc.aws_subnet.public",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-083f1db349a104d4c",
            "id": "r-rtb-07e360e09b6ed07941080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07e360e09b6ed0794",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_internet_gateway.this",
            "module.rafael_vpc.aws_route_table.public",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:route-table/rtb-0a28b5a4f4d597a56",
            "id": "rtb-0a28b5a4f4d597a56",
            "owner_id": "338094379420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-09a83ab7f1b327ec5",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rafael_vpc-private",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc-private",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d61545942958700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:route-table/rtb-07e360e09b6ed0794",
            "id": "rtb-07e360e09b6ed0794",
            "owner_id": "338094379420",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-083f1db349a104d4c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rafael_vpc-public",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc-public",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-02d61545942958700"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03478a4b043a317ba",
            "route_table_id": "rtb-0a28b5a4f4d597a56",
            "subnet_id": "subnet-0990cca3e68831f68"
          },
          "dependencies": [
            "module.rafael_vpc.aws_route_table.private",
            "module.rafael_vpc.aws_subnet.private",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f19095157148ed45",
            "route_table_id": "rtb-0a28b5a4f4d597a56",
            "subnet_id": "subnet-0534d83e254eb7f5d"
          },
          "dependencies": [
            "module.rafael_vpc.aws_route_table.private",
            "module.rafael_vpc.aws_subnet.private",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fa0aa4dcd9e3d789",
            "route_table_id": "rtb-0a28b5a4f4d597a56",
            "subnet_id": "subnet-0637e4a15a2c7c40c"
          },
          "dependencies": [
            "module.rafael_vpc.aws_route_table.private",
            "module.rafael_vpc.aws_subnet.private",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a4794b8522ebe3f",
            "route_table_id": "rtb-07e360e09b6ed0794",
            "subnet_id": "subnet-017926da2551f90b7"
          },
          "dependencies": [
            "module.rafael_vpc.aws_route_table.public",
            "module.rafael_vpc.aws_subnet.public",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-098be1541e43b053f",
            "route_table_id": "rtb-07e360e09b6ed0794",
            "subnet_id": "subnet-05cc76f84e97d42b5"
          },
          "dependencies": [
            "module.rafael_vpc.aws_route_table.public",
            "module.rafael_vpc.aws_subnet.public",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02e3fe1cccaf1acb8",
            "route_table_id": "rtb-07e360e09b6ed0794",
            "subnet_id": "subnet-097ce084262ace9c4"
          },
          "dependencies": [
            "module.rafael_vpc.aws_route_table.public",
            "module.rafael_vpc.aws_subnet.public",
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:subnet/subnet-0990cca3e68831f68",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0990cca3e68831f68",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338094379420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafael_vpc-private-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rafael_vpc-private-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:subnet/subnet-0534d83e254eb7f5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0534d83e254eb7f5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338094379420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafael_vpc-private-us-east-1b",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rafael_vpc-private-us-east-1b",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:subnet/subnet-0637e4a15a2c7c40c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0637e4a15a2c7c40c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338094379420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafael_vpc-private-us-east-1c",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "rafael_vpc-private-us-east-1c",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:subnet/subnet-017926da2551f90b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-017926da2551f90b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338094379420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafael_vpc-public-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "rafael_vpc-public-us-east-1a",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:subnet/subnet-05cc76f84e97d42b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cc76f84e97d42b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338094379420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafael_vpc-public-us-east-1b",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "rafael_vpc-public-us-east-1b",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:subnet/subnet-097ce084262ace9c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-097ce084262ace9c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "338094379420",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rafael_vpc-public-us-east-1c",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "rafael_vpc-public-us-east-1c",
              "kubernetes.io/cluster/rafael-eks": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-02d61545942958700"
          },
          "dependencies": [
            "module.rafael_vpc.aws_vpc.this",
            "module.rafael_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.rafael_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:338094379420:vpc/vpc-02d61545942958700",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b0940f7775138970",
            "default_route_table_id": "rtb-0fd005aea495a2e4a",
            "default_security_group_id": "sg-096621d6a974c0214",
            "dhcp_options_id": "dopt-0e304732cb40ad937",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02d61545942958700",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fd005aea495a2e4a",
            "owner_id": "338094379420",
            "tags": {
              "Name": "rafael_vpc",
              "kubernetes.io/cluster/rafael-eks": "shared"
            },
            "tags_all": {
              "Name": "rafael_vpc",
              "kubernetes.io/cluster/rafael-eks": "shared"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}